--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-CLOUDINARY_CLOUD_NAME=omg
-CLOUDINARY_KEY=lol
-CLOUDINARY_SECRET=yarite
-COOKIE_SECRET="PLEASE CHANGE ME OH PLEASE CHANGE ME"
+CLOUDINARY_CLOUD_NAME="dbatraku0"
+CLOUDINARY_KEY=267658131775765
+CLOUDINARY_SECRET="01oAbxs6xPJ4Qnf7ku9wrzymB5Q"
+COOKIE_SECRET="somekind!oF#SecretWhichMustbe32CharsLong"
 DATABASE_URL=mongodb+srv://Sick:30Fnti5vQf3VChSK@sickcluster.kgf8tag.mongodb.net/?retryWrites=true&w=majority
 STRIPE_SECRET="sk_test_nahhhh"
 MAIL_HOST="smtp.ethereal.email"
