password reset logic

--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ DATABASE_URL=mongodb+srv://Sick:30Fnti5vQf3VChSK@sickcluster.kgf8tag.mongodb.net
 STRIPE_SECRET="sk_test_nahhhh"
 MAIL_HOST="smtp.ethereal.email"
 MAIL_PORT=587
-MAIL_USER="get-one-from- http://ethereal.email"
-MAIL_PASS="get-one-from- http://ethereal.email"
+MAIL_USER="nayeli23@ethereal.email"
+MAIL_PASS=" 6frA49pNegRUJ7a3mC "
 FRONTEND_URL="http://localhost:7777"
